Working on mobile buttons and fixing mobile Footer.

--- a/css/Style.css
+++ b/css/Style.css
@@ -624,4 +624,20 @@ input:checked + .slider:before {
     .linkCollab a:hover {
         background-color: #343127;
     }
+
+
+    .footer-center, .contacts, #email {
+        display: none;
+    }
+
+    .mobileButton {
+        display: flex;
+        align-items: center;
+        margin-right: 0.5rem;
+    }
+
+    .mobileButton img {
+        width: 4rem;
+        margin: 1rem;
+    }
 }
